tests/fail/no-unimported-text-namespace-type.tsx
import type * as Text from "@/components/ui/text";

const view = <Text />;
